--- a/my-shop-backend/package.json
+++ b/my-shop-backend/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.13",
     "uuid": "^8.3.2",
     "uuidv1": "^1.6.14"
