--- a/my-shop-backend/package.json
+++ b/my-shop-backend/package.json
@@ -11,6 +11,7 @@
   "author": "Minh Tran",
   "license": "ISC",
   "dependencies": {
+    "braintree": "^3.7.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
