--- a/my-shop-client/package.json
+++ b/my-shop-client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "braintree-web-drop-in-react": "^1.2.1",
     "mapbox-gl": "^2.5.1",
     "rc-slider": "^9.7.4",
     "react": "^17.0.2",
